--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "test": "test"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.34",
     "ganache-cli": "^6.9.1",
     "mocha": "^7.1.2",
     "solc": "^0.4.17",
-    "web3": "^1.0.0-beta.26"
+    "web3": "^1.2.7"
   },
   "devDependencies": {},
   "repository": {
